# Rosetta

./: .gitignore  README.md  logs_crohme_rs_eval.txt  logs_crohme_rs_eval_fixedresample.txt  logs_crohme_rs_train.txt  logs_crohme_train.txt  logs_quickdraw_train.txt  pyproject.toml
api/: README.md
api/src/hmer_api/: _hershey.py  analyze.py  evaluate.py  inkfont.py  inkplot.py  main.py  page.py  recognize.py  schemas.py  sketch.py
api/tests/: test_analyze.py  test_health.py  test_inkfont.py  test_inkplot.py  test_page_process.py  test_sketch.py
artifacts/: vocab.json  vocab_crohme.json
docs/: datasets.md  roadmap.md
ml/: README.md
ml/configs/: crohme.yaml  mathwriting.yaml  overfit_crohme.yaml  overfit_synth.yaml  quickdraw.yaml
ml/src/hmer_ml/: evaluate.py  infer.py  infer_sketch.py  segment.py  train.py  train_sketch.py
ml/src/hmer_ml/model/: __init__.py  decoder.py  encoder.py  heads.py  seq2seq.py
ml/src/hmer_ml/utils/: checkpoint.py
ml/tests/: test_augment.py  test_model.py  test_quickdraw.py  test_segment.py  test_smoke.py
scripts/: download_quickdraw.py  e2e_page_process.py  gen_inkfont_glyphs.py  install_plugin.ps1  serve_api.ps1
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: NotebookCanvas.tsx  SolvedPanel.tsx
web/lib/: api.ts  notebook.ts
xournalpp-plugin/rosetta/: main.lua  plugin.ini
